--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.virtual_documents*
 *-checkpoint*
 launch.json
+1B/Introduction to Data Science/ds-intro
+1B/Foundations of Software Engineering/FSE_2023_G4
